Fix nav button wrapping

--- a/data/css/General.css
+++ b/data/css/General.css
@@ -85,6 +85,7 @@ body {
   top: 0;
   transition: all 0.06s ease-out;
   position: relative;
+  white-space: nowrap;
 }
 
 .navBar a:visited {
